aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__add__tests__add_lit_reg_expr.snap
---
source: aya-assembly/src/parser/instructions/add.rs
expression: result
---
Instruction(
    AddLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        BinaryOp {
            lhs: HexLiteral(
                ByteOffset {
                    start: 10,
                    end: 14,
                },
            ),
            operator: Add,
            rhs: Register(
                ByteOffset {
                    start: 17,
                    end: 19,
                },
            ),
        },
    ),
)
