aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__add__tests__add_lit_reg_var.snap
---
source: aya-assembly/src/parser/instructions/add.rs
expression: result
---
Instruction(
    AddLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Var(
            ByteOffset {
                start: 9,
                end: 12,
            },
        ),
    ),
)
