aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__add__tests__add_reg_reg.snap
---
source: aya-assembly/src/parser/instructions/add.rs
expression: result
---
Instruction(
    AddRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
